# FastAPIproject

./: .gitignore  compose.yaml  nginx.conf  pet_project.code-workspace
.github/workflows/: accounts.test.yaml
deploy/: compose.yaml
deploy/observability/: otel-collector-config.yaml  prometheus.yaml
deploy/observability/grafana/provisioning/dashboards/: dashboards.yaml
deploy/observability/grafana/provisioning/datasources/: datasource.yaml
services/accounts/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  base.yaml  compose.test.yaml  compose.yaml  pyproject.toml  pytest.ini
services/accounts/app/: main.py
services/accounts/app/api/v1/: endpoints.py  routers.py
services/accounts/app/core/: config.py  security.py
services/accounts/app/db/: database.py
services/accounts/app/dependencies/: deps.py
services/accounts/app/logic/: main_logic.py
services/accounts/app/models/: users.py
services/accounts/app/repositories/: crud.py
services/accounts/app/schemas/: pydantic_schemas.py
services/accounts/app/scripts/: gen_keys.py
services/accounts/migrations/: env.py
services/accounts/migrations/versions/: 2026_03_09_1651-18c59e79bcae_first_run_create_table.py  2026_03_18_0800-227b2b2559e6_first_run_create_table.py  2026_04_17_0330-9b1dfb18f3bf_first_run_create_table_authusers.py  2026_04_19_1212-913733a146e1_create_table_auth_users.py
services/accounts/tests/: conftest.py  test_config_db.py  test_crud.py  test_main.py  test_unit.py  utils_for_tests.py
services/resource/: Dockerfile  compose.yaml  pyproject.toml
services/resource/app/: main.py
services/resource/app/api/v1/: endpoints.py
services/resource/app/core/: config.py  security.py
services/resource/app/dependencies/: deps.py
services/resource/app/models/: base.py
services/resource/app/repositories/: crud.py
services/resource/app/schemas/: pydantic_schemas.py
services/resource/migrations/: env.py
services/resource/migrations/versions/: 2026_04_01_1424-c647eb2f0900_create_tables_posts_user_data.py  2026_04_01_1518-88a53a5f50d2_add_column_created_at_in_userdata.py  2026_04_03_2018-268f13d44571_create_tables_posts_user_data.py  2026_04_05_1453-d0e35d7406ff_create_tables_posts_user_data.py
